Make hash seeds configurable and use 64-bit defaults